# memory

./: CMakeLists.txt  README.md
CMake/: add_external_project.cmake  compiler_options.cmake
benchmark/: CMakeLists.txt  bench_google_bench.cpp  bench_nanobench.cpp
include/dze/: allocator.hpp  bidir_buf_allocator.hpp  forward_buf_allocator.hpp  miallocator.hpp  typed_allocator.hpp
include/dze/details/: bidir_allocate.hpp  forward_allocate.hpp
include/dze/pmr/: bidir_buf_resource.hpp  forward_buf_resource.hpp  memory_resource.hpp  mimalloc_resource.hpp  polymorphic_allocator.hpp  resource.hpp
